Unified the use of BufferToTextureTargetMap for all the Processes

Currently BufferToTextureTargetMap is generated seperately for
ui/renderer process. Now added forbrowser process as well and
unified the use of it.

BUG=725082

CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2895273002
Cr-Commit-Position: refs/heads/master@{#484833}

Former-commit-id: c4b9cf2a67c8be392a878373d356a43ac4b3fe24