content/browser/renderer_host/compositor_impl_android.cc
@@ -541,6 +541,8 @@ void CompositorImpl::CreateLayerTreeHost() {
   settings.initial_debug_state.show_fps_counter =
       command_line->HasSwitch(cc::switches::kUIShowFPSCounter);
   settings.single_thread_proxy_scheduler = true;
+  settings.resource_settings.buffer_to_texture_target_map =
+      CreateBufferToTextureTargetMap();
 
   animation_host_ = cc::AnimationHost::CreateMainInstance();
 
